[gd_scene load_steps=5 format=3 uid="uid://duwqrvi2084u6"]

[ext_resource type="Script" uid="uid://by6nnikls557j" path="res://scenes/ui/pre_end_turn_panel/pre_end_turn_panel.gd" id="1_ntdn6"]
[ext_resource type="FontFile" uid="uid://2ms0awc4u8eg" path="res://assets/fonts/playfair display/static/PlayfairDisplay-Black.ttf" id="2_16qo2"]
[ext_resource type="Texture2D" uid="uid://cuba2sdvlldgx" path="res://assets/exp/progress_bar/circle_progress_bar.svg" id="3_oeyu8"]
[ext_resource type="Texture2D" uid="uid://d1qjfp5f5wdyh" path="res://assets/exp/progress_bar/circle_progress_bar_over.svg" id="4_qarol"]

[node name="PreEndTurnPanel" type="Control"]
z_index = 20
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ntdn6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.190762, 0.190762, 0.190762, 0.34902)

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(600, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Подсчёт хода"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubViewportContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 7.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MoneyContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer/MoneyContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 20
text = "Деньги:"
vertical_alignment = 1

[node name="MoneyLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer/MoneyContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 20

[node name="EnergyContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer/EnergyContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 20
text = "Энергия:"
vertical_alignment = 1

[node name="EnergyLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer/EnergyContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 20

[node name="MoodContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer/MoodContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 20
text = "Настроение:"
vertical_alignment = 1

[node name="MoodLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer/MoodContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 20

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 60

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EndTurn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_16qo2")
text = "Завершить ход"

[node name="EndTurnProgress" type="TextureProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
step = 0.01
fill_mode = 4
texture_under = ExtResource("3_oeyu8")
texture_progress = ExtResource("4_qarol")

[node name="Back" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_16qo2")
text = "Вернуться"
